--- a/aws/DEA/1.DE-concept.md
+++ b/aws/DEA/1.DE-concept.md
@@ -1,5 +1,13 @@
 # Type of Data (Structured, Unstructured, Semi)
 ## Definition
+Structured data is data organized under some certain format (not clearly definition)
+
+Unstructured data is data not organized under any format. it's the major data that is generated in almost organization. it require more resource, cost to store, process the type of data.
+
+Semi unstructured data sit between structured and unstructured. Some element in the type of data is structured, while some other is not.
+
+I think we can use atomic data to define type of data concept. if smallest element of data is atomic, then it is structured data.
+
 ## Related Problem 
 
 # Properties of Data (Volume, Velocity, Variety)
