--- a/aws/DEA/1.DE-concept.md
+++ b/aws/DEA/1.DE-concept.md
@@ -1,14 +1,14 @@
 # Type of Data (Structured, Unstructured, Semi)
 ## Definition
-Structured data is data organized under some certain format (not clearly definition)
+Structured data is data organized under relational or tabular format
 
-Unstructured data is data not organized under any format. it's the major data that is generated in almost organization. it require more resource, cost to store, process the type of data.
+Unstructured data is text, audio, video, image, ...
 
-Semi unstructured data sit between structured and unstructured. Some element in the type of data is structured, while some other is not.
-
-I think we can use atomic data to define type of data concept. if smallest element of data is atomic, then it is structured data.
+Semi unstructured is json, xml, email, html,...
 
 ## Related Problem 
+Major of data generated from any organization is unstructured data, that's tough for storing and analyzing.
+
 
 # Properties of Data (Volume, Velocity, Variety)
 ## Definition
