--- a/aws/DEA/1.DE-concept.md
+++ b/aws/DEA/1.DE-concept.md
@@ -12,6 +12,12 @@ Major of data generated from any organization is unstructured data, that's tough
 
 # Properties of Data (Volume, Velocity, Variety)
 ## Definition
+volume: data in big volume
+
+variety: data from wide range of source
+
+velocity: 
+
 ## Related Problem 
 
 # Data Warehouse 
