--- a/aws/DEA/3.aws-analytic.md
+++ b/aws/DEA/3.aws-analytic.md
@@ -1,28 +1,36 @@
 # 1. AWS Glue 
-## Problem
+## Purpose
+A scalable engine for ETL processing.
+
 ## Input
+a variety of data source
 ## Output
+a variety of data target
+
 ## Architecture 
+Spark, Python, Ray???
+
 ## On-premise Alternative
+Apache spark
 
 
 # 2. Amazon Athena
-## Problem
+## Purpose
 ## Input
 ## Output
 ## Architecture 
 ## On-premise Alternative
 
 
-# 3. Amazon Analytics
-## Problem
+# 3. Amazon EMR
+## Purpose
 ## Input
 ## Output
 ## Architecture 
 ## On-premise Alternative
 
 # 4. Amazon Kinesis
-## Problem
+## Purpose
 ## Input
 ## Output
 ## Architecture 
