--- a/aws/DEA/3.aws-analytic/3.aws-analytic.md
+++ b/aws/DEA/3.aws-analytic/3.aws-analytic.md
@@ -8,18 +8,32 @@ a variety of data source
 a variety of data target
 
 ## Architecture 
-Spark, Python, Ray???
+![](aws-glue-arch.drawio.svg)
 
 ## On-premise Alternative
-Apache spark
+Apache spark 
+
+- spark executor memory = worker type
+- executor instances = number of workers
+- executor core = workers os thread
+
 
 
 # 2. Amazon Athena
 ## Purpose
+A scalable query engine for adhoc, realtime analytics.
+
 ## Input
+Sql query
+
 ## Output
+Query data result
+
 ## Architecture 
+![](aws-athena-arch.drawio.svg)
+
 ## On-premise Alternative
+Apache Presto on HDFS.
 
 
 # 3. Amazon EMR
