--- a/aws/DEA/3.aws-analytic/3.aws-analytic.md
+++ b/aws/DEA/3.aws-analytic/3.aws-analytic.md
@@ -49,3 +49,24 @@ Apache Presto on HDFS.
 ## Output
 ## Architecture 
 ## On-premise Alternative
+
+# 5. Amazon Redshift
+## Purpose
+OLAP database (non serverless)
+
+## Input
+- Data Query
+- Streaming Ingest
+- Batch Ingest (S3 staging)
+## Output
+- Data query result
+
+## Architecture 
+![](aws-redshift.drawio.svg)
+## On-premise Alternative
+Clickhouse
+| Redshift             | Clickhouse             |
+| -------------------- | ---------------------- |
+| DISTKEY              | partition key          |
+| SORTKEY              | primary key, order key |
+| No MergeTree support | MergeTree support      |
