--- a/aws/DEA/4.aws-security/4.aws-security.md
+++ b/aws/DEA/4.aws-security/4.aws-security.md
@@ -1,26 +1,35 @@
 # 1. AWS IAM
-## Problem
+## Purpose
+An access control system for almost every aws resources.
+
 ## Input
+- Access Control configuration
 ## Output
+- Credential
+
 ## Architecture 
+![](aws-iam.drawio.svg)
+
 ## On-premise Alternative
+Keycloak (Oauth2)
 
 # 2. AWS KMS 
-## Problem
+## Purpose
+
 ## Input
 ## Output
 ## Architecture 
 ## On-premise Alternative
 
 # 3. Amazon Macie
-## Problem
+## Purpose
 ## Input
 ## Output
 ## Architecture 
 ## On-premise Alternative
 
 # 4. AWS Secrets Manager
-## Problem
+## Purpose
 ## Input
 ## Output
 ## Architecture 
