update security note

--- a/aws/DEA/4.aws-security/4.aws-security.md
+++ b/aws/DEA/4.aws-security/4.aws-security.md
@@ -15,22 +15,36 @@ Keycloak (Oauth2)
 
 # 2. AWS KMS 
 ## Purpose
+A central key management, support better for adminstration tasks like auditing trail, backup, ...
 
 ## Input
-## Output
-## Architecture 
-## On-premise Alternative
+- Key management request
 
-# 3. Amazon Macie
+## Output
+- Encrypted Data Key 
+- Plain Data Key 
+
+## Architecture 
+![](aws-kms.drawio.svg)
+
+## On-premise Alternative
+UNKNOWN
+
+# 3. AWS Secrets Manager
 ## Purpose
-## Input
-## Output
-## Architecture 
-## On-premise Alternative
+A central application credentials management (dynamic credentials)
 
-# 4. AWS Secrets Manager
-## Purpose
 ## Input
+- application credential
+
 ## Output
+- application credentails
+
 ## Architecture 
+![alt](aws-secret-manager.drawio.svg)
+
 ## On-premise Alternative
+UNKNOWN
+
+
+
