--- a/aws/DEA/2.aws-core/2.aws-core.md
+++ b/aws/DEA/2.aws-core/2.aws-core.md
@@ -3,7 +3,9 @@
 ## Input
 ## Output
 ## Architecture 
+
 ## On-premise Alternative
+MintIO
 
 # 2. AWS Lambda
 ## Problem
@@ -11,3 +13,4 @@
 ## Output
 ## Architecture 
 ## On-premise Alternative
+UKNOWN
