--- a/aws/DEA/5.aws-monitor/5.aws-monitor.md
+++ b/aws/DEA/5.aws-monitor/5.aws-monitor.md
@@ -1,12 +1,28 @@
 # 1. Amazon CloudWatch
-## Problem
+## Purpose
+A observability tool
+
 ## Input
+Time series datasource
+Applicatioin logs
 ## Output
+Data visualization
+Action triggered
 ## Architecture 
+![](aws-cloudwatch.drawio.svg)
 ## On-premise Alternative
+Grafana
+| Amazon CloudWatch | Grafana       |
+| ----------------- | ------------- |
+| namespace/metrics | datasource    |
+| dashboard         | dashboard     |
+| widget            | visualization |
+| Alarm             | Alert         |
+
+
 
 # 2. AWS step functions.
-## Problem
+## Purpose
 ## Input
 ## Output
 ## Architecture 
