--- a/aws/DEA/5.aws-monitor/5.aws-monitor.md
+++ b/aws/DEA/5.aws-monitor/5.aws-monitor.md
@@ -23,7 +23,24 @@ Grafana
 
 # 2. AWS step functions.
 ## Purpose
+Serverless workflow management.
+
 ## Input
+- Statemachine definition
+- User interactiion
 ## Output
+- Execution
 ## Architecture 
+
 ## On-premise Alternative
+Apache Airflow
+| Step Function                | Airflow   |
+| ---------------------------- | --------- |
+| Task / state machines        | DAGs      |
+| JSON                         | python    |
+| Activity                     | Operator  |
+| step functions web UI        | webserver |
+| Amazon EventBridge Scheduler | Scheduler |
+
+# 3. Amazon EventBridge
+- distrubuted crontab
