--- a/aws/DEA/2.aws-core/2.aws-core.md
+++ b/aws/DEA/2.aws-core/2.aws-core.md
@@ -1,16 +1,26 @@
 # 1. Amazon S3
-## Problem
-## Input
-## Output
-## Architecture 
+## Purpose
+- a serverless object storage service.
 
+## Input
+- data 
+## Output
+- data
+## Architecture 
+![](aws-S3.drawio.svg)
 ## On-premise Alternative
 MintIO
 
 # 2. AWS Lambda
-## Problem
+## Purpose 
+A serverless compute service.
+
 ## Input
+- program input
 ## Output
+- program output
+
 ## Architecture 
+![](aws-lambda.drawio.svg)
 ## On-premise Alternative
-UKNOWN
+OpenFaas
