--- a/aws/DEA/3.aws-analytic/3.aws-analytic.md
+++ b/aws/DEA/3.aws-analytic/3.aws-analytic.md
@@ -11,12 +11,25 @@ a variety of data target
 ![](aws-glue-arch.drawio.svg)
 
 ## On-premise Alternative
-Apache spark 
+Apache Spark
+| AWS Glue              | Apache Spark      |
+| --------------------- | ----------------- |
+| spark executor memory | worker type       |
+| executor instances    | number of workers |
+| num executor core     | workers os thread |
 
-- spark executor memory = worker type
-- executor instances = number of workers
-- executor core = workers os thread
-
+# 1.1 AWS Glue DataBrew
+## Purpose
+## Input
+- A variety of data sources:
+  - orc, parquet
+  - csv, xlsx, json, jsonl
+## Output
+- A A variety of data sources:
+  - orc, partquet, avro
+  - csv, xml, json
+## Architecture
+## On-premise Alternative
 
 
 # 2. Amazon Athena
@@ -24,10 +37,15 @@ Apache spark
 A scalable query engine for adhoc, realtime analytics.
 
 ## Input
-Sql query
+- Sql query
+- Query data:
+  -  parquet, orc
+  -  json, csv, text
+  -  binary
+  -  data source connectors
 
 ## Output
-Query data result
+- Query data result
 
 ## Architecture 
 ![](aws-athena-arch.drawio.svg)
