--- a/aws/DEA/3.aws-analytic/3.aws-analytic.md
+++ b/aws/DEA/3.aws-analytic/3.aws-analytic.md
@@ -58,8 +58,10 @@ data record
 ## Architecture 
 ## On-premise Alternative
 Apache Kafka
-kinesis stream = kafka topic
-kisnesis shard = kafka parition
+| Amazon kinesis | Kafka          |
+| -------------- | -------------- |
+| kinesis stream | kafka topic    |
+| kisnesis shard | kafka parition |
 
 # 5. Amazon Redshift
 ## Purpose
@@ -81,3 +83,21 @@ Clickhouse
 | DISTKEY              | partition key          |
 | SORTKEY              | primary key, order key |
 | No MergeTree support | MergeTree support      |
+
+
+# 6. Amazon Lake Formation
+## Purpose
+A Datalake Management Tool
+
+## Input
+- data request
+- data access policy 
+
+## Output
+- data request approval
+
+## Architecture
+![](aws-lake-formation.drawio.svg)
+
+## On-premise Alternative
+UNKNOWN
