update aws glue databrew and lake formation

--- a/aws/DEA/3.aws-analytic/3.aws-analytic.md
+++ b/aws/DEA/3.aws-analytic/3.aws-analytic.md
@@ -29,6 +29,7 @@ Apache Spark
   - orc, partquet, avro
   - csv, xml, json
 ## Architecture
+![](aws-glue-databrew.drawio.svg)
 ## On-premise Alternative
 
 
