--- a/aws/DEA/3.aws-analytic/3.aws-analytic.md
+++ b/aws/DEA/3.aws-analytic/3.aws-analytic.md
@@ -120,3 +120,15 @@ A Datalake Management Tool
 
 ## On-premise Alternative
 UNKNOWN
+
+# 7. AWS Data Exchange
+## Purpose
+Sharing data platform
+## Input
+- Dataset
+## Output
+- Dataset
+## Architecture
+![]()
+## On-premise Alternative
+UNKNOWN
